--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1024,7 +1024,14 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
       set vrssgr "[sgr se \{]"
       set vrs \{
       foreach vrspec $vr_list {
-         lassign $vrspec vrnameset vrvalues
+         lassign $vrspec vrnameset vrvalues vrdflidx
+         if {$vrdflidx != -1} {
+            # apply sgr to default variant value
+            set vrsgrvalues [lreplace $vrvalues $vrdflidx $vrdflidx [sgr de\
+               [lindex $vrvalues $vrdflidx]]]
+         } else {
+            set vrsgrvalues $vrvalues
+         }
          if {[info exists notfirstvr]} {
             set colonsgr [sgr se :]
             append vrssgr $colonsgr
@@ -1032,8 +1039,8 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
          } else {
             set notfirstvr 1
          }
-         append vrssgr [sgr $vrsgr $vrnameset[lindex $vrvalues 0]]
-         foreach vrvalue [lrange $vrvalues 1 end] {
+         append vrssgr [sgr $vrsgr $vrnameset[lindex $vrsgrvalues 0]]
+         foreach vrvalue [lrange $vrsgrvalues 1 end] {
             append vrssgr $commasgr[sgr $vrsgr $vrvalue]
          }
          append vrs $vrnameset[join $vrvalues :]
