--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -758,6 +758,16 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
          if {[info exists ::g_scanModuleVariant($mod)]} {
             set vrspeclist $::g_scanModuleVariant($mod)
          }
+         # if module is currently loaded, gather its variant values
+         if {[info exists ::g_loadedModuleVariant($mod)]} {
+            foreach lovrspec $::g_loadedModuleVariant($mod) {
+               lassign $lovrspec lovrname lovrvalue lovrvalisbool lovrvalisdfl
+               if {$lovrvalisbool} {
+                  set lovrvalue [expr {$lovrvalue ? {on} : {off}}]
+               }
+               set lovrarr($lovrname) $lovrvalue
+            }
+         }
       }
    }
 
@@ -804,6 +814,9 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
             } else {
                set vrdflidxarr($vrname) [expr {$vrvalisdfl ? {0} : {-1}}]
             }
+            # indicate what value in the list is the loaded one
+            set vrloidxarr($vrname) [expr {[info exists lovrarr($vrname)] ?\
+               [lsearch -exact $vrvalues $lovrarr($vrname)] : {-1}}]
             if {$vrvalisbool} {
                set vrarr($vrname) $vrvalue
             } else {
@@ -864,13 +877,15 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
          7 {
             if {$vrisbool($vrname)} {
                if {$vrarr($vrname)} {
-                  lappend ret [list {} [list +$vrname] $vrdflidxarr($vrname)]
+                  lappend ret [list {} [list +$vrname] $vrdflidxarr($vrname)\
+                     $vrloidxarr($vrname)]
                   # track if +var variant has been reported to build key
                   if {![info exists ::g_used_va(on)]} {
                      set ::g_used_va(on) 1
                   }
                } else {
-                  lappend ret [list {} [list -$vrname] $vrdflidxarr($vrname)]
+                  lappend ret [list {} [list -$vrname] $vrdflidxarr($vrname)\
+                     $vrloidxarr($vrname)]
                   # track if -var variant has been reported to build key
                   if {![info exists ::g_used_va(off)]} {
                      set ::g_used_va(off) 1
@@ -881,7 +896,8 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
             } elseif {$report != 5 && [info exists\
                ::g_variantShortcut($vrname)]} {
                set sc $::g_variantShortcut($vrname)
-               lappend ret [list $sc $vrarr($vrname) $vrdflidxarr($vrname)]
+               lappend ret [list $sc $vrarr($vrname) $vrdflidxarr($vrname)\
+                  $vrloidxarr($vrname)]
                # track if variant shortcut has been reported to build key
                # unless if key should not be updated (report mode '6')
                if {$report != 6 && ![info exists ::g_used_va($sc)]} {
@@ -889,7 +905,7 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
                }
             } else {
                lappend ret [list $vrname= $vrarr($vrname)\
-                  $vrdflidxarr($vrname)]
+                  $vrdflidxarr($vrname) $vrloidxarr($vrname)]
                # track if var=val variant has been reported to build key
                # unless if key should not be updated (report mode '6')
                if {$report != 6 && ![info exists ::g_used_va(val)]} {
