Fix boolean variant key report issue on avail output

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -844,13 +844,15 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
                if {$vrarr($vrname)} {
                   lappend ret +$vrname
                   # track if +var variant has been reported to build key
-                  if {![info exists ::g_used_va(on)]} {
+                  # unless if key should not be updated (report mode '6')
+                  if {$report != 6 && ![info exists ::g_used_va(on)]} {
                      set ::g_used_va(on) 1
                   }
                } else {
                   lappend ret -$vrname
                   # track if -var variant has been reported to build key
-                  if {![info exists ::g_used_va(off)]} {
+                  # unless if key should not be updated (report mode '6')
+                  if {$report != 6 && ![info exists ::g_used_va(off)]} {
                      set ::g_used_va(off) 1
                   }
                }
