--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1024,14 +1024,14 @@ proc formatListEltToDisplay {elt eltsgr eltsuffix sym_list symsgr show_syms\
       set vrssgr "[sgr se \{]"
       set vrs \{
       foreach vrspec $vr_list {
-         lassign $vrspec vrnameset vrvalues vrdflidx vrloadedidx
+         lassign $vrspec vrnameset vrvalues vrdflidx vrloadedidx loadedsgrkey
          array unset vrvalsgridx
          # apply sgr to default and loaded variant value
          if {$vrdflidx != -1} {
             lappend vrvalsgridx($vrdflidx) de
          }
          if {$vrloadedidx != -1} {
-            lappend vrvalsgridx($vrloadedidx) L
+            lappend vrvalsgridx($vrloadedidx) $loadedsgrkey
          }
          set vrsgrvalues $vrvalues
          foreach vrvalidx [array names vrvalsgridx] {
