--- a/testsuite/modulefiles.3/tag/.modulerc
+++ b/testsuite/modulefiles.3/tag/.modulerc
@@ -145,6 +145,27 @@ if {[info exists env(TESTSUITE_TAG_OPT)]} {
             set tomorrow [clock format [expr {[clock seconds]+86400}] -format %Y-%m-%d]
             module-forbid --after $tomorrow tag/8.0
         }
+        vrdfl2 {
+            module-tag foo tag/8.0
+        }
+        vrdfl3 {
+            module-tag foo tag/8.0 foo=val1
+        }
+        vrdfl5 {
+            module-tag foo tag/8.0 foo=val1 bar=val2
+        }
+        vrdfl6 {
+            module-tag foo tag/8.0 foo=val1 bar=val1
+        }
+        vrdfl7 {
+            module-tag foo tag/8.0 foo=val1
+        }
+        vrdfl8 {
+            module-tag foo tag/8.0 bar=val1
+        }
+        vrdfl9 {
+            module-tag foo tag/8.0 bar=val2
+        }
     }
 }
 if {[info exists env(TESTSUITE_STASH)]} {
