--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -93,14 +93,13 @@ task:
   << : *CLONE_TEMPLATE
   env:
     COVERAGE: y
-  osx_instance:
-    image: monterey-xcode
+  macos_instance:
+    image: ghcr.io/cirruslabs/macos-monterey-base:latest
   reqinstall_script:
     - brew update
-    - brew install md5sha1sum expect dejagnu grep fish r
+    - brew install md5sha1sum expect dejagnu grep fish r tcl-tk
   configure_script:
-    # need to specify where to find tclConfig.sh on newer xcode release
-    - ./configure --prefix=/tmp/modules --with-loadedmodules=null:dot --with-tcl=/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/Tcl.framework/Versions/8.5
+    - ./configure --prefix=/tmp/modules --with-loadedmodules=null:dot --with-tcl=/opt/homebrew/Cellar/tcl-tk/8.6.13/lib
   << : *BUILD_INSTALL_TEST_TEMPLATE
   coverage_script:
     - for f in tcl/*.tcl; do script/nglfar2ccov $f; done
