--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -3,7 +3,7 @@
 # SUBCMD.TCL, module sub-commands procedures
 # Copyright (C) 2002-2004 Mark Lakata
 # Copyright (C) 2004-2017 Kent Mein
-# Copyright (C) 2016-2022 Xavier Delaruelle
+# Copyright (C) 2016-2023 Xavier Delaruelle
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -553,7 +553,9 @@ proc cmdModuleSave {{coll default}} {
 
    if {![file exists $colldir]} {
       reportDebug "Creating $colldir"
-      file mkdir $colldir
+      if {[catch {file mkdir $colldir} errMsg]} {
+         reportErrorAndExit "Collection directory cannot be created.\n$errMsg"
+      }
    } elseif {![file isdirectory $colldir]} {
       reportErrorAndExit "$colldir exists but is not a directory"
    }
