Fix shell alias translation with fish shell 3.6
A '$argv' string is added in fish 3.6 at the end of shell alias
definition when reported with functions command.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -2141,7 +2141,7 @@ proc execShAndGetEnv {shell script args} {
             (?!'?alias)\[^\\n\]+)?\\n(.+?)?\\s*\\nend\\n$subsep\$"
          # fetch aliases from available functions
          set aliasre "^function (\\S+?) \[^\\n\]*?--description\
-            '?alias\[^\\n\]+\\n\\s*(.+?)\\s*\\nend\\n$subsep\$"
+            '?alias\[^\\n\]+\\n\\s*(.+?)(?: \\\$argv)?\\s*\\nend\\n$subsep\$"
          set compre {complete ((?:-\S+? )*?)(?:(?:-c|--command)\
             )?([^-]\S+)(.*?)$}
          set comprevar [list match valpart1 name valpart2]
