cirrus: fix Codecov run on MacOS M1 environment
Codecov tool is not available on arm64 platform. Use arch utility to run
x86_64 codecov binary on MacOS M1 virtual machine.

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -94,7 +94,7 @@ task:
   env:
     COVERAGE: y
   macos_instance:
-    image: ghcr.io/cirruslabs/macos-monterey-base:latest
+    image: ghcr.io/cirruslabs/macos-monterey-xcode:latest
   reqinstall_script:
     - brew update
     - brew install md5sha1sum expect dejagnu grep fish r tcl-tk
@@ -106,7 +106,7 @@ task:
     - gcov -o lib envmodules
     - curl -Os https://uploader.codecov.io/latest/macos/codecov
     - chmod +x codecov
-    - ./codecov -t ${CODECOV_TOKEN}
+    - arch -x86_64 ./codecov -t ${CODECOV_TOKEN}
   << : *ARTIFACTS_TEMPLATE
 
 task:
