Allow module spec without name on several subcmds
Allow module specification with variant definition and no module name
version for avail, list, paths and whatis sub-commands.

--- a/tcl/coll.tcl.in
+++ b/tcl/coll.tcl.in
@@ -1,7 +1,7 @@
 ##########################################################################
 
 # COLL.TCL, collection management procedures
-# Copyright (C) 2016-2022 Xavier Delaruelle
+# Copyright (C) 2016-2023 Xavier Delaruelle
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -320,7 +320,7 @@ proc parseCollectionContent {fdata} {
          }
          # parse module specification to distinguish between module + variant
          # specified and multiple modules specified on a single line
-         set parsedlist [parseModuleSpecification 0 {*}$cleanlist]
+         set parsedlist [parseModuleSpecification 0 0 {*}$cleanlist]
          foreach parsed $parsedlist {
             set tag_arr($parsed) $tag_list
          }
