--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -440,7 +440,7 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
       if {$modnamevr ne $newmodnamevr} {
          set modnamevr_tag_list [getTagList $modnamevr]
          set modnamevr_extratag_list [getExtraTagList $modnamevr]
-         lassign [parseModuleSpecification 0 {*}$newmodnamevr] modnamevr
+         lassign [parseModuleSpecification 0 0 {*}$newmodnamevr] modnamevr
          if {$fetch_tags} {
             collectModuleTags $modnamevr
             # set tags applying to previous name (without default variant set)
@@ -893,7 +893,8 @@ proc module-info {what {more {}}} {
          set modname [currentState modulename]
          set vrlist [getVariantList $modname 1]
          if {[llength $vrlist] > 0} {
-            lassign [parseModuleSpecification 0 $modname {*}$vrlist] modnamevr
+            lassign [parseModuleSpecification 0 0 $modname {*}$vrlist]\
+               modnamevr
          } else {
             set modnamevr $modname
          }
@@ -1166,7 +1167,7 @@ proc module-forbid {args} {
       }
 
       # record each forbid spec after parsing them
-      foreach modarg [parseModuleSpecification 0 {*}$modarglist] {
+      foreach modarg [parseModuleSpecification 0 0 {*}$modarglist] {
          setModspecTag $modarg forbidden $proplist
       }
    } elseif {$isnearly} {
@@ -1177,7 +1178,7 @@ proc module-forbid {args} {
          lappend proplist message $nearlymessage
       }
       # record each nearly forbid spec after parsing them
-      foreach modarg [parseModuleSpecification 0 {*}$modarglist] {
+      foreach modarg [parseModuleSpecification 0 0 {*}$modarglist] {
          setModspecTag $modarg nearly-forbidden $proplist
       }
    }
@@ -1223,7 +1224,7 @@ proc module-hide {args} {
    # skip hide spec record if application criteria are not met
    if {$apply} {
       # record each hide spec after parsing them
-      foreach modarg [parseModuleSpecification 0 {*}$modarglist] {
+      foreach modarg [parseModuleSpecification 0 0 {*}$modarglist] {
          setModspecHidingLevel $modarg $hidinglvl
          if {$hiddenloaded} {
             setModspecTag $modarg hidden-loaded
@@ -1268,7 +1269,7 @@ proc module-tag {args} {
    # skip tag record if application criteria are not met
    if {$apply} {
       # record each hide spec after parsing them
-      foreach modarg [parseModuleSpecification 0 {*}$modarglist] {
+      foreach modarg [parseModuleSpecification 0 0 {*}$modarglist] {
          setModspecTag $modarg $tag
       }
    }
@@ -1725,7 +1726,7 @@ proc unset-function {function} {
 
 proc is-loaded {args} {
    # parse module version specification
-   set args [parseModuleSpecification 0 {*}$args]
+   set args [parseModuleSpecification 0 0 {*}$args]
 
    foreach mod $args {
       if {[getLoadedMatchingName $mod returnfirst] ne {}} {
@@ -1757,7 +1758,7 @@ proc conflict {args} {
    defineModEqProc [isIcase] [getConf extended_default]
 
    # parse module version specification
-   set args [parseModuleSpecification 0 {*}$args]
+   set args [parseModuleSpecification 0 0 {*}$args]
 
    # register conflict list unless record inhibited for current iterp context
    if {[currentState inhibit_req_record] != [currentState evalid]} {
@@ -1845,7 +1846,7 @@ proc prereqAnyModfileCmd {tryload auto args} {
    set curmodnamevr [currentState modulenamevr]
 
    # parse module version specification
-   set args [parseModuleSpecification 0 {*}$args]
+   set args [parseModuleSpecification 0 0 {*}$args]
 
    # register prereq list (sets of optional prereq are registered as list)
    # unless record inhibited for current iterp context
@@ -1996,7 +1997,8 @@ proc is-used {args} {
 # test at least one of the modulefiles passed as argument exists
 proc is-avail {args} {
    # parse module version specification
-   set args [parseModuleSpecification 0 {*}$args]
+   # a module name is mandatory
+   set args [parseModuleSpecification 0 0 {*}$args]
    set ret 0
 
    # disable error reporting to avoid modulefile errors
