--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -899,15 +899,15 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
          7 {
             if {$vrisbool($vrname)} {
                if {$vrarr($vrname)} {
-                  lappend ret [list {} [list +$vrname] $vrdflidxarr($vrname)\
-                     $vrloidxarr($vrname) $loadedsgrkey]
+                  lappend ret [list $vrname {} [list +$vrname]\
+                     $vrdflidxarr($vrname) $vrloidxarr($vrname) $loadedsgrkey]
                   # track if +var variant has been reported to build key
                   if {![info exists ::g_used_va(on)]} {
                      set ::g_used_va(on) 1
                   }
                } else {
-                  lappend ret [list {} [list -$vrname] $vrdflidxarr($vrname)\
-                     $vrloidxarr($vrname) $loadedsgrkey]
+                  lappend ret [list $vrname {} [list -$vrname]\
+                     $vrdflidxarr($vrname) $vrloidxarr($vrname) $loadedsgrkey]
                   # track if -var variant has been reported to build key
                   if {![info exists ::g_used_va(off)]} {
                      set ::g_used_va(off) 1
@@ -918,15 +918,15 @@ proc getVariantList {mod {report 0} {excl_dflval 0} {from 0}} {
             } elseif {$report != 5 && [info exists\
                ::g_variantShortcut($vrname)]} {
                set sc $::g_variantShortcut($vrname)
-               lappend ret [list $sc $vrarr($vrname) $vrdflidxarr($vrname)\
-                  $vrloidxarr($vrname) $loadedsgrkey]
+               lappend ret [list $vrname $sc $vrarr($vrname)\
+                  $vrdflidxarr($vrname) $vrloidxarr($vrname) $loadedsgrkey]
                # track if variant shortcut has been reported to build key
                # unless if key should not be updated (report mode '6')
                if {$report != 6 && ![info exists ::g_used_va($sc)]} {
                   set ::g_used_va($sc) $vrname
                }
             } else {
-               lappend ret [list $vrname= $vrarr($vrname)\
+               lappend ret [list $vrname $vrname= $vrarr($vrname)\
                   $vrdflidxarr($vrname) $vrloidxarr($vrname) $loadedsgrkey]
                # track if var=val variant has been reported to build key
                # unless if key should not be updated (report mode '6')
