Filter sym ver if target unset during extra match
Unset the symbolic version elements targeting an element removed during
the extra match search.

--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -2793,7 +2793,7 @@ proc getModules {dir {mod {}} {fetch_mtime 0} {search {}} {filter {}}} {
    # Phase #3: perform extra match search
 
    if {[isExtraMatchSearchRequired $mod]} {
-      filterExtraMatchSearch $mod found_list
+      filterExtraMatchSearch $mod found_list versmod_list
    }
 
    # Phase #4: elaborate directory content with default element selection
