ts: test symbol filtering during extra match search in 51/030

--- a/testsuite/modulefiles.4/scan/.modulerc
+++ b/testsuite/modulefiles.4/scan/.modulerc
@@ -1,3 +1,13 @@
 #%Module
 module-virtual scan/1.1 ./1.0
 module-virtual scan/2.1 ./2.0
+
+if {[info exists env(TESTSUITE_SCAN)]} {
+    switch -- $env(TESTSUITE_SCAN) {
+        sym1 {
+            module-version scan/1.0 sym
+            module-version scan/2.0 foo
+            module-version scan/99.9 unk
+        }
+    }
+}
