ts: test alias filtering during extra match search in 51/030

--- a/testsuite/modulefiles.4/scan/.modulerc
+++ b/testsuite/modulefiles.4/scan/.modulerc
@@ -9,5 +9,9 @@ if {[info exists env(TESTSUITE_SCAN)]} {
             module-version scan/2.0 foo
             module-version scan/99.9 unk
         }
+        alias1 {
+            module-alias scan/alias scan/1.0
+            module-alias scan/alunk scan/unk
+        }
     }
 }
